# AI-Career-Copilot

./: .gitignore  README.md  pyproject.toml
scripts/: test_gemini.py
src/: main.py
src/agents/: jd_agent.py  resume_agent.py  skill_gap_agent.py
src/api/: health.py  job_description.py  resume.py  skill_gap.py  student.py
src/config/: settings.py
src/database/: connection.py  session.py
src/models/: __init__.py  analysis.py  job_description.py  resume.py  student.py
src/schemas/: __init__.py  job_description.py  resume.py  skill_gap.py  student.py
src/services/: gemini_service.py  jd_service.py  resume_service.py  skill_gap_service.py  student_service.py
tests/: test_database.py  test_jd_api.py  test_resume_api.py  test_skill_gap_api.py  test_student_api.py
